--- a/src/Modules/PersonMgmt/Domain/PersonMgmt.Domain.csproj
+++ b/src/Modules/PersonMgmt/Domain/PersonMgmt.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Core.Domain\Core.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Aggregates\" />
+  </ItemGroup>
+
 </Project>
