--- a/src/Modules/PersonMgmt/Application/PersonMgmt.Application.csproj
+++ b/src/Modules/PersonMgmt/Application/PersonMgmt.Application.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Domain\PersonMgmt.Domain.csproj" />
+    <ProjectReference Include="..\Domain\PersonMgmt.Domain.csproj" />
   </ItemGroup>
 
 </Project>
