--- a/src/Modules/PersonMgmt/Application/PersonMgmt.Application.csproj
+++ b/src/Modules/PersonMgmt/Application/PersonMgmt.Application.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\Domain\PersonMgmt.Domain.csproj" />
   </ItemGroup>
 
