--- a/src/Core/Core.Infrastructure/Core.Infrastructure.csproj
+++ b/src/Core/Core.Infrastructure/Core.Infrastructure.csproj
@@ -21,4 +21,12 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Persistence\Repositories\" />
+  </ItemGroup>
+
 </Project>
