--- a/src/Core/Core.Domain/Core.Domain.csproj
+++ b/src/Core/Core.Domain/Core.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
+  </ItemGroup>
+
 </Project>
