--- a/src/Presentation/API/API.csproj
+++ b/src/Presentation/API/API.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Core.Infrastructure\Core.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Modules\PersonMgmt\Application\PersonMgmt.Application.csproj" />
+  </ItemGroup>
+
 </Project>
