Update error fix

--- a/src/Core/Core.Infrastructure/Core.Infrastructure.csproj
+++ b/src/Core/Core.Infrastructure/Core.Infrastructure.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Persistence\Configurations\PersonMgmt\" />
     <Folder Include="Persistence\Repositories\PersonMgmt\" />
   </ItemGroup>
 
