Update Identity module infrastructure

--- a/src/Presentation/API/appsettings.json
+++ b/src/Presentation/API/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,21212;Database=UniversityMS;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "Key": "your-32-character-secret-key-here",
+    "Issuer": "UniversitySystem.Identity",
+    "Audience": "UniversitySystem.API",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
