--- a/src/Shared/Shared.Infrastructure/Shared.Infrastructure.csproj
+++ b/src/Shared/Shared.Infrastructure/Shared.Infrastructure.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Modules\Academic\Domain\Academic.Domain.csproj" />
+    <ProjectReference Include="..\..\Modules\Identity\Domain\Identity.Domain.csproj" />
     <ProjectReference Include="..\..\Modules\PersonMgmt\Domain\PersonMgmt.Domain.csproj" />
     <ProjectReference Include="..\..\Core\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\..\Core\Core.Domain\Core.Domain.csproj" />
